[Aalekh] ADD: Implemented API for reset password and also done swagger implementation and rspec testing
