# config/routes.rb
@@ -6,6 +6,7 @@ Rails.application.routes.draw do
       post "users/signup" => "users#signup"
       post "users/login" => "users#login"
       post "users/forget" => "users#forgetPassword"
+      post "users/reset/:id" => "users#resetPassword"
     end
   end
 end
